@@ -19,8 +19,10 @@ subject DN and subjectAltName extension.  SSLsplit fully supports Server Name
 Indication (SNI) and is able to work with RSA, DSA and ECDSA keys and DHE and
 ECDHE cipher suites.  SSLsplit can also use existing certificates of which the
 private key is available, instead of generating forged ones.  SSLsplit supports
-NULL-prefix CN certificates and can deny OCSP requests in a generic way.
-SSLsplit removes HPKP response headers in order to prevent public key pinning.
+NULL-prefix CN certificates and can deny OCSP requests in a generic way.  For
+HTTP and HTTPS connections, SSLsplit removes response headers for HPKP in order
+to prevent public key pinning, for HSTS to allow the user to accept untrusted
+certificates, and Alternate Protocols to prevent switching to QUIC/SPDY.
 
 See the manual page sslsplit(1) for details on using SSLsplit and setting up
 the various NAT engines.
