@@ -64,7 +64,10 @@ Indication (SNI) and is able to work with RSA, DSA and ECDSA keys and DHE and
 ECDHE cipher suites.  SSLsplit can also use existing certificates of which the
 private key is available, instead of generating forged ones.  SSLsplit supports
 NULL-prefix CN certificates and can deny OCSP requests in a generic way.
-SSLsplit removes HPKP response headers in order to prevent public key pinning.
+For HTTP and HTTPS connections, SSLsplit removes response headers
+for HPKP in order to prevent public key pinning,
+for HSTS to allow the user to accept untrusted certificates,
+and Alternate Protocols to prevent switching to QUIC/SPDY.
 .LP
 SSLsplit supports a number of NAT engines, static forwarding and SNI DNS
 lookups to determine the original destination of redirected connections
